--- a/isms-ui/src/app/components/footer/footer.component.html
+++ b/isms-ui/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer fixed-bottom py-1">
+<footer class="footer fixed-bottom py-1 bg-piana-main">
   <div class="container">
     <div class="footer-bottom align-items-center text-center has-text-centered">
       <div>کلیه حقوق این وب سایت متعلق به گروه <a class="piana-social-link" href="https://rayanhamafza.com">rayanhamafza.com</a> است.</div>
