--- a/isms-ui/src/app/views/home/home.component.html
+++ b/isms-ui/src/app/views/home/home.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="!(shareStateService.editModeSubject | async).editMode">
 
   <div class="page-wrapper" [ngClass]="{'toggled' : getSideBarState()}">
-    <app-sidebar ></app-sidebar>
+    <app-piana-sidebar ></app-piana-sidebar>
     <main class="page-content">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-piana-main">
         <button class="btn" type="button" (click)="toggleSidebar()" >
           <span *ngIf="!getSideBarState()" class="fa fa-bars" style="color: white"></span>
           <span *ngIf="getSideBarState()" class="fa fa-bars" style="color: white"></span>
