--- a/isms-ui/src/app/views/risk-management/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/consequence-parameters/consequence-parameters.component.html
@@ -20,11 +20,18 @@
             </div>
             <div class="col col-12 col-sm-12 col-md-6">
               <app-consequence-parameters-type></app-consequence-parameters-type>
-<!--              <router-outlet></router-outlet>-->
+
             </div>
           </div>
         </mat-expansion-panel>
       </mat-accordion>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col col-12">
+      <button class="btn btn-outline-success">
+        افزودن پارامتر جدید
+      </button>
     </div>
   </div>
 </div>
