--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
@@ -10,7 +10,7 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="row">
+          <div class="row justify-content-center">
 
             <div class="col col-12 col-sm-12 col-md-6">
               <mat-form-field appearance="fill" style="width: 100%">
@@ -18,9 +18,10 @@
                 <input matInput>
               </mat-form-field>
             </div>
+          </div>
+          <div class="row justify-content-center">
             <div class="col col-12 col-sm-12 col-md-6">
               <app-consequence-parameters-type></app-consequence-parameters-type>
-
             </div>
           </div>
         </mat-expansion-panel>
