add parameter type attr

--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
@@ -21,7 +21,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col col-12 col-sm-12 col-md-6">
-              <app-consequence-parameters-type></app-consequence-parameters-type>
+              <app-consequence-parameters-type [parameterId]="param['id']"></app-consequence-parameters-type>
             </div>
           </div>
         </mat-expansion-panel>
