--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters-type/consequence-parameters-type.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters-type/consequence-parameters-type.component.html
@@ -1,15 +1,15 @@
-<ng-container *ngIf="parameters$ | async">
+<ng-container *ngIf="attributes$ | async">
   <div >
-    <label id="example-radio-group-label" class="mb-2">انتخاب الگو</label>
+    <label id="example-radio-group-label" class="mb-2">
+      <span>الگوی مقادیر</span>
+      <i class="btn btn-sm btn-outline-secondary fas fa-edit px-1 mx-1"
+         (click)="navigateToChange()"
+         style="padding-bottom: 2px; padding-top: 2px"></i>
+    </label>
     <mat-radio-group
       aria-labelledby="example-radio-group-label"
       class="example-radio-group" [value]="type" >
 
-    <div *ngFor="let typeKey of _parameters | keyvalue"
-         style="border: 1px solid #cdc2c2; padding: 6px; border-radius: 16px; margin-bottom: 8px;">
-      <mat-radio-button class="example-radio-button">
-        {{typeKey.key}}
-      </mat-radio-button>
       <table class="table table-striped">
         <thead>
         <tr>
@@ -19,14 +19,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let attr of typeKey.value; let i = index">
+        <tr *ngFor="let attr of _attributes; let i = index">
           <th scope="row">{{attr['orders']}}<!--{{i}}--></th>
           <td>{{attr['value']}}</td>
           <td>{{attr['label']}}</td>
         </tr>
         </tbody>
       </table>
-    </div>
+
     </mat-radio-group>
   </div>
 </ng-container>
