--- a/isms-ui/src/app/components/loading/loading.component.html
+++ b/isms-ui/src/app/components/loading/loading.component.html
@@ -1,9 +1,5 @@
-<div class="modal" [class.is-active]="showLoading" style="z-index: 41;">
-  <div class="modal-background"></div>
-  <div class="modal-card">
-    <section class="modal-card-body">
-      <progress class="progress is-small is-primary" max="100">15%</progress>
-<!--      {{selectedMessage.message}}-->
-    </section>
+<div mat-dialog-content>
+  <div class="container">
+    <mat-progress-bar mode="buffer"></mat-progress-bar>
   </div>
 </div>
