--- a/isms-ui/src/app/views/home/home.component.html
+++ b/isms-ui/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!(shareStateService.editModeSubject | async).editMode">
-
+  <app-loading></app-loading>
   <div class="page-wrapper" [ngClass]="{'toggled' : getSideBarState()}">
     <app-piana-sidebar ></app-piana-sidebar>
     <main class="page-content">
@@ -56,6 +56,7 @@
 </ng-container>
 
 <ng-container *ngIf="(shareStateService.editModeSubject | async).editMode">
+  <app-loading></app-loading>
   <app-notification></app-notification>
   <router-outlet></router-outlet>
 </ng-container>
