--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
@@ -21,6 +21,14 @@
           </div>
           <div class="row justify-content-center">
             <div class="col col-12 col-sm-12 col-md-6">
+              <div >
+                <label id="example-radio-group-label" class="mb-2">
+                  <span>الگوی مقادیر</span>
+                  <i class="btn btn-sm btn-outline-secondary fas fa-edit px-1 mx-1"
+                     (click)="navigateToChange(param['id'], param['consequenceParametersTypeId'])"
+                     style="padding-bottom: 2px; padding-top: 2px"></i>
+                </label>
+              </div>
               <app-consequence-parameters-type [parameterId]="param['id']"></app-consequence-parameters-type>
             </div>
           </div>
