--- a/isms-ui/src/app/views/risk-management/asset-management/settings/parameters-selector-dialog/parameters-selector-dialog.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/parameters-selector-dialog/parameters-selector-dialog.component.html
@@ -1,9 +1,11 @@
-<h1 mat-dialog-title>{{data['title']}}</h1>
+<h1 mat-dialog-title class="my-mat-header">{{data['title']}}</h1>
 <div mat-dialog-content>
   <div class="container">
     <div class="row align-items-start my-header pb-3">
       <div class="col col-12">
-        <app-consequence-parameters-type-selector></app-consequence-parameters-type-selector>
+        <app-consequence-parameters-type-selector
+          (onSelect)="onSelectParameterType($event)"
+          [parameterTypeId]="data['selectedTypeId']"></app-consequence-parameters-type-selector>
       </div>
     </div>
   </div>
@@ -12,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col col-auto px-4">
-        <button class="btn btn-sm btn-outline-secondary" (click)="closeClick()">بستن</button>
+        <button class="btn btn-sm btn-outline-secondary" (click)="closeClick()">انصراف</button>
       </div>
     </div>
   </div>
