--- a/isms-ui/src/app/views/root/root.component.html
+++ b/isms-ui/src/app/views/root/root.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<app-loading></app-loading>
+<!--<app-loading></app-loading>-->
 <router-outlet></router-outlet>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
