--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
@@ -3,19 +3,25 @@
     <div class="col col-12">
       <!--multi-->
       <mat-accordion class="example-headers-align" *ngIf="parameters$ | async">
-        <mat-expansion-panel *ngFor="let param of _parameters">
+        <mat-expansion-panel *ngFor="let param of _parameters" (opened)="open(param[0])">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              {{'RISK-MANAGEMENT.SETTINGS.CONSEQUENCE-PARAMETERS.' + param['alias'] | translate}}
+              {{'RISK-MANAGEMENT.SETTINGS.CONSEQUENCE-PARAMETERS.' + (param[1]  | uppercase) | translate}}
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="row justify-content-center">
+          <h1 *ngIf="paramOpened == param[0]">{{paramOpened}} - {{param[0]}}</h1>
+          <router-outlet *ngIf="(paramOpened | async) == param[0]"></router-outlet>
+
+          <!--<div class="row justify-content-center">
 
             <div class="col col-12 col-sm-12 col-md-6">
               <mat-form-field appearance="fill" style="width: 100%">
                 <mat-label>ضریب</mat-label>
                 <input matInput>
+                <button mat-icon-button matSuffix>
+                  <mat-icon>done</mat-icon>
+                </button>
               </mat-form-field>
             </div>
           </div>
@@ -31,7 +37,7 @@
               </div>
               <app-consequence-parameters-type [parameterId]="param['id']"></app-consequence-parameters-type>
             </div>
-          </div>
+          </div>-->
         </mat-expansion-panel>
       </mat-accordion>
     </div>
@@ -44,4 +50,3 @@
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
