--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type-selector/consequence-parameters-type-selector.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type-selector/consequence-parameters-type-selector.component.html
@@ -8,6 +8,7 @@
               (click)="select(typeKey.key)">انتخاب</button>
       <button class="btn btn-sm btn-outline-secondary mx-1 my-1"
               (click)="select(typeKey.key)">الگوی جدید</button>
+      <div class="table-responsive">
         <table class="table table-striped">
           <thead>
           <tr>
@@ -24,6 +25,7 @@
           </tr>
           </tbody>
         </table>
+      </div>
     </div>
   </div>
 </ng-container>
