--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type/consequence-parameters-type.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type/consequence-parameters-type.component.html
@@ -1,5 +1,9 @@
+<div class="row justify-content-center mt-2 mx-1" *ngIf="_paramName">
+  <div class="col col-12 col-sm-12 col-md-9 alert alert-primary text-center">
+    {{'RISK-MANAGEMENT.SETTINGS.CONSEQUENCE-PARAMETERS.' + (_paramName | uppercase) | translate}}
+  </div>
+</div>
 <div class="row justify-content-center">
-
   <div class="col col-12 col-sm-12 col-md-9">
     <mat-form-field appearance="fill" style="width: 100%">
       <mat-label>ضریب</mat-label>
