--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type/consequence-parameters-type.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters-type/consequence-parameters-type.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center mt-2 mx-1" *ngIf="_paramName">
   <div class="col col-12 col-sm-12 col-md-9 alert alert-primary text-center">
-    {{'RISK-MANAGEMENT.SETTINGS.CONSEQUENCE-PARAMETERS.' + (_paramName | uppercase) | translate}}
+    {{_paramAlias ? ('RISK-MANAGEMENT.SETTINGS.CONSEQUENCE-PARAMETERS.' + (_paramAlias | uppercase) | translate) : _paramName}}
   </div>
 </div>
 <div class="row justify-content-center">
