--- a/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
+++ b/isms-ui/src/app/views/risk-management/asset-management/settings/consequence-parameters/consequence-parameters.component.html
@@ -3,7 +3,7 @@
     <div class="col col-sm-12 col-md-3">
       <div class="d-grid my-2">
         <button class="btn btn-outline-success" (click)="newParameter()">
-          افزودن پارامتر جدید-{{'COMMON.YES' | translate}}
+          افزودن پارامتر جدید
         </button>
       </div>
       <ng-container *ngIf="parameters$ | async">
